--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watch 'npm run build' ./src",
     "bundle": "npm run build && browserify ./dist/index.js --s SC -o ./dist/min.js",
-    "doc": "npm run build && jsdoc -d docs/ dist/index.js"
+    "doc": "typedoc src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -21,14 +21,11 @@
     "url": "https://github.com/sushovan4/simplicial-complex/issues"
   },
   "homepage": "https://github.com/sushovan4/simplicial-complex#readme",
-  "dependencies": {
-    "numjs": "git+https://github.com/nicolaspanel/numjs.git"
-  },
   "devDependencies": {
     "@types/numjs": "^0.16.0",
     "browserify": "^17.0.0",
     "browserify-shim": "^3.8.14",
-    "jsdoc": "^3.6.7",
+    "typedoc": "^0.21.4",
     "typescript": "^4.3.5",
     "watch": "^1.0.2"
   }
