--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tdajs/normal-form",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Smith Normal Form and utility",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watch 'npm run build' ./src",
     "bundle": "npm run build && browserify ./dist/index.js --s SC -o ./dist/min.js",
-    "doc": "typedoc src/index.ts"
+    "doc": "typedoc src/index.ts",
+    "publish": "npm publish --access=public"
   },
   "repository": {
     "type": "git",
